Refactor to eopy

--- a/examples/02_processing.ipynb
+++ b/examples/02_processing.ipynb
@@ -6,9 +6,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from remotesensing.image import Loader, Image\n",
-    "from remotesensing.processing import enhance\n",
-    "from remotesensing.tools import visualise\n",
+    "from eopy.image import Loader, Image\n",
+    "from eopy.processing import enhance\n",
+    "from eopy.tools import visualise\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np"
@@ -86,7 +86,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from remotesensing.processing import pansharpening"
+    "from eopy.processing import pansharpening"
    ]
   },
   {
